--- a/src/CypherSheet.Client/wwwroot/index.html
+++ b/src/CypherSheet.Client/wwwroot/index.html
@@ -32,7 +32,7 @@
     <script src="_framework/blazor.webassembly#[.{fingerprint}].js"></script>
     <script src="_content/MudBlazor/MudBlazor.min.js"></script>
     <script src="_content/TG.Blazor.IndexedDB/indexedDb.Blazor.js"></script>
-    <!-- <script>navigator.serviceWorker.register('/CypherSheet/service-worker.js', { updateViaCache: 'none' });</script> -->
+    <script>navigator.serviceWorker.register('/CypherSheet/service-worker.js', { updateViaCache: 'none' });</script>
 </body>
 
 </html>
