--- a/src/CypherSheet.Client/wwwroot/index.html
+++ b/src/CypherSheet.Client/wwwroot/index.html
@@ -29,7 +29,7 @@
         <a href="." class="reload">Reload</a>
         <span class="dismiss">🗙</span>
     </div>
-    <script src="_framework/blazor.webassembly#[.{fingerprint}].js"></script>
+    <script src="_framework/blazor.webassembly.js"></script>
     <script src="_content/MudBlazor/MudBlazor.min.js"></script>
     <script src="_content/TG.Blazor.IndexedDB/indexedDb.Blazor.js"></script>
     <script>navigator.serviceWorker.register('/CypherSheet/service-worker.js', { updateViaCache: 'none' });</script>
