--- a/src/CypherSheet.Client/wwwroot/index.html
+++ b/src/CypherSheet.Client/wwwroot/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CypherSheet.Client</title>
-    <base href="/CypherSheet/" />
+    <base href="/" />
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
     <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
     <link href="CypherSheet.Client.styles.css" rel="stylesheet" />
@@ -32,7 +32,7 @@
     <script src="_framework/blazor.webassembly.js"></script>
     <script src="_content/MudBlazor/MudBlazor.min.js"></script>
     <script src="_content/TG.Blazor.IndexedDB/indexedDb.Blazor.js"></script>
-    <script>navigator.serviceWorker.register('/CypherSheet/service-worker.js', { updateViaCache: 'none' });</script>
+    <script>navigator.serviceWorker.register('service-worker.js', { updateViaCache: 'none' });</script>
 </body>
 
 </html>
