--- a/src/CypherSheet.Client/wwwroot/index.html
+++ b/src/CypherSheet.Client/wwwroot/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CypherSheet.Client</title>
     <base href="https://matheusfernandescafe.github.io/CypherSheet/" />
+    <!--
+        <base href="http://localhost:5041/CypherSheet/" />
+    -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
     <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
     <link href="CypherSheet.Client.styles.css" rel="stylesheet" />
