feat(assets): update favicon and app icons with multiple formats
- Add favicon.ico for standard browser favicon support
- Add favicon-16.png and favicon-32.png for high-resolution favicon variants
- Remove legacy favicon.png in favor of standardized formats
- Update icon-192.png and icon-512.png with improved designs
- Add comprehensive favicon link tags to index.html for cross-browser compatibility
- Add PWA manifest and apple-touch-icon references with proper organization
- Switch base href to localhost development environment (commented production URL)
- Improve favicon organization with semantic HTML comments

--- a/src/CypherSheet.Client/wwwroot/index.html
+++ b/src/CypherSheet.Client/wwwroot/index.html
@@ -5,13 +5,20 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CypherSheet.Client</title>
-    <base href="https://matheusfernandescafe.github.io/CypherSheet/" />
+    <base href="http://localhost:5041/CypherSheet/" />
     <!--
-        <base href="http://localhost:5041/CypherSheet/" />
+        <base href="https://matheusfernandescafe.github.io/CypherSheet/" />
     -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
     <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
     <link href="CypherSheet.Client.styles.css" rel="stylesheet" />
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="/CypherSheet/favicon.ico" />
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16.png" />
+    <link rel="shortcut icon" href="/CypherSheet/favicon.ico" />
+    
+    <!-- PWA Manifest and Icons -->
     <link href="manifest.webmanifest" rel="manifest" />
     <link rel="apple-touch-icon" sizes="512x512" href="icon-512.png" />
     <link rel="apple-touch-icon" sizes="192x192" href="icon-192.png" />
