--- a/src/CypherSheet.Client/wwwroot/index.html
+++ b/src/CypherSheet.Client/wwwroot/index.html
@@ -12,6 +12,8 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
     <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
     <link href="CypherSheet.Client.styles.css" rel="stylesheet" />
+    <link href="css/character-image-display.css" rel="stylesheet" />
+    <link href="css/image-upload.css" rel="stylesheet" />
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="/CypherSheet/favicon.ico" />
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32.png" />
@@ -43,6 +45,9 @@
     <script src="_content/MudBlazor/MudBlazor.min.js"></script>
     <script src="_content/TG.Blazor.IndexedDB/indexedDb.Blazor.js"></script>
     <script src="js/clipboard.js"></script>
+    <script src="js/imageProcessor.js"></script>
+    <script src="js/intersectionObserver.js"></script>
+    <script src="js/lazyLoading.js"></script>
     <script>navigator.serviceWorker.register('service-worker.js', { updateViaCache: 'none' });</script>
 </body>
 
