--- a/src/CypherSheet.Client/wwwroot/index.html
+++ b/src/CypherSheet.Client/wwwroot/index.html
@@ -5,9 +5,9 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CypherSheet.Client</title>
-    <base href="http://localhost:5041/CypherSheet/" />
+    <base href="https://matheusfernandescafe.github.io/CypherSheet/" />
     <!--
-        <base href="https://matheusfernandescafe.github.io/CypherSheet/" />
+        <base href="http://localhost:5041/CypherSheet/" />
     -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
     <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
@@ -48,6 +48,8 @@
     <script src="js/imageProcessor.js"></script>
     <script src="js/intersectionObserver.js"></script>
     <script src="js/lazyLoading.js"></script>
+    <script src="js/modal.js"></script>
+    <script src="js/modal.js"></script>
     <script>navigator.serviceWorker.register('service-worker.js', { updateViaCache: 'none' });</script>
 </body>
 
